kubernetes/deployment/grafana/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
